--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <!-- Customize your theme here. -->
         <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
         <!-- <item name="android:windowIsTranslucent">true</item> -->
-        <!-- <item name="android:windowBackground">@mipmap/ic_launcher_round</item> -->
+        <item name="android:windowBackground">@color/ic_launcher_background</item>
         <!-- <item name="android:windowDisablePreview">true</item> -->
     </style>
 
